[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scenes/GameOver.gd" type="Script" id=1]
[ext_resource path="res://Assects/theme.tres" type="Theme" id=2]
[ext_resource path="res://Assects/fonts/Greenscr.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 56
font_data = ExtResource( 3 )

[node name="GameOver" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_top = 0.0111111
anchor_right = 1.0
anchor_bottom = 1.01111
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Panel" type="Panel" parent="CenterContainer"]
margin_right = 1024.0
margin_bottom = 720.0
rect_min_size = Vector2( 1024, 720 )

[node name="ColorRect" type="ColorRect" parent="CenterContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -8.0
margin_bottom = -8.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/Panel/ColorRect"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -83.0
margin_bottom = -39.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonTA" type="Button" parent="CenterContainer/Panel/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -152.0
margin_top = -21.0
margin_right = 152.0
margin_bottom = 21.0
theme = ExtResource( 2 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
text = "Try again"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonE" type="Button" parent="CenterContainer/Panel/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = 35.0
margin_right = 80.0
margin_bottom = 77.0
theme = ExtResource( 2 )
custom_colors/font_color_hover = Color( 1, 0, 0, 1 )
text = "Exit"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CenterContainer/Panel/ColorRect/ButtonTA" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CenterContainer/Panel/ColorRect/ButtonE" to="." method="_on_ButtonE_pressed"]
